# django-docker-my-tutorial

./: Dockerfile  Dockerfile0  Dockerfile1  Dockerfile2  README.md  db.sqlite3  pyproject.toml
mysite/: asgi.py  settings.py  urls.py  wsgi.py
selfedu/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
selfedu/templates/selfedu/: about.html  adduser.html  base.html  index.html  info.html  list_doors.html  list_menu.html
selfedu/templatetags/: doors_tags.py
step0/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
step0/templates/step0/: base.html  index.html
