[tool.poetry]
name = "django-docker-my-tutorial"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["nesrv"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"


[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
mypy = "^0.950"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




